<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="otp_vrification">OTP Vrification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_91">+91-</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_se_to">Enter the OTP se to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
</resources>